--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -11,5 +11,6 @@
         "c:\\Java\\javafx-sdk-19.0.2.1\\lib\\javafx.swing.jar",
         "c:\\Java\\javafx-sdk-19.0.2.1\\lib\\javafx.web.jar",
         "c:\\Java\\javafx-sdk-19.0.2.1\\lib\\javafx-swt.jar"
-    ]
+    ],
+    "cSpell.enabled": false
 }
